# grammar-tool

./: .gitignore  LICENSE  MANIFEST.in  README.md  TODO.md  alias.sh  pyproject.toml  setup.cfg  setup.py  tasks.py
grammar_tool/: __init__.py  chdir.py  config.py  config.yaml  core.py  pp.py  wrap.py
grammar_tool/generator/: ast-patch-code.py  common.py
grammar_tool/generator/antlr4/: README.txt  core.py
grammar_tool/generator/lark/: core.py
grammar_tool/generator/leg/: core.py  old.py
grammar_tool/generator/parser/: ast.py  common.py  retcode.py  text.py
grammar_tool/generator/pegen/: core.py
grammar_tool/scripts/: grammar-tool.sh
sample/: .alias  Makefile  g-recipe  parser.py  test_grammar.py
sample/tree/underscore/: components.gt  grammar.peg  test_this.py
sample/tree/ws/: test_this.py
scripts/: antlr4-gen-parser  grammar-tool  wipe
scripts/actual/: antlr4-gen-parser.sh  grammar-tool.sh  wipe.sh
test-files/: Makefile  README.txt  alias.sh  compose-order.gt
test-files/antlr4/: Makefile
test-files/antlr4/adder/: test_this.py
test-files/lark/: compose-order.gt  grammar.lark  run.py
test-files/lark/adder/: compose-order.gt  grammar.lark  sample.py
test-files/peg/: README.txt  compose-order.gt  fail  no-fail
test-files/peg/adder/: compose-order.gt  main.c  test_this.py  tests.gunit  this.peg
test-files/peg/ast-adder/: ast.c  compose-order.gt  main.c  term.c  test_this.py
test-files/peg/dc/: main.c  test_this.py  this.peg
test-files/peg/peg/: full.peg
test-files/pegen/: Makefile  compose-order.gt
test-files/scripts/: link-tool
(+252 files in other folders)
